Fix home page not viewable on mobile devices
Had to set the parents of the container to 100% before the height of the
container could be set to 100%

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,12 +16,8 @@ h1, h2, h3, h4, h5, h6 {
   fill: var(--fg-color);
 }
 
-body, #___gatsby {
-  overflow-y: hidden;
-}
-
-html {
-  overflow-y: auto;
+body, html, #___gatsby, #gatsby-focus-wrapper {
+  height: 100%;
 }
 
 body {
